--- a/forum/app.html
+++ b/forum/app.html
@@ -7,20 +7,50 @@
     <script src="app.js"></script>
   </head>
   <body>
-    <h1>Freelancer Forum</h1>
+    <h1>The Freelancer Forum</h1>
     <h2>Freelancers For Hire</h2>
-    <p>List of available freelancers available for hire below</p>
+    <p>
+      List of available freelancers available for hire, prices vary with skills
+    </p>
+    <h1>Freelancers</h1>
+    <div id="Names">
+      <!-- Freelancers added here -->
+    </div>
     <table id="freelancersList">
       <tr>
-        <th>Alice</th>
-        <th>Bob</th>
-        <th>Carol</th>
+        <th>Name</th>
+        <th>Occupation</th>
+        <th>Starting Price</th>
       </tr>
       <tr>
+        <td>Alice</td>
         <td>Writer</td>
-        <td>Teacher</td>
-        <td>Programmer</td>
+        <td>$30</td>
       </tr>
+      <tr>
+        <td>Bob</td>
+        <td>Teacher</td>
+        <td>$30</td>
+      </tr>
+      <tr>
+        <td>Carol</td>
+        <td>Programmer</td>
+        <td>$70</td>
+      </tr>
+      <tr>
+        <td>Julia</td>
+        <td>Housekeeping</td>
+        <td>$25</td>
+      </tr>
+      <tr>
+        <td>Emma</td>
+        <td>Personal Assistant</td>
+        <td>$40</td>
+      </tr>
+      <tr>
+        <td>Rick</td>
+        <td>Landscaper</td>
+        <td>$55</td>
       </tr>
     </table>
   </body>
