--- a/forum/app.html
+++ b/forum/app.html
@@ -12,8 +12,7 @@
     <p>
       List of available freelancers available for hire, prices vary with skills
     </p>
-    <h1>Freelancers</h1>
-    <div id="Names">
+    <h3>Available</h3>
       <!-- Freelancers added here -->
     </div>
     <table id="freelancersList">
